--- a/views/layouts/layouts.ejs
+++ b/views/layouts/layouts.ejs
@@ -8,6 +8,7 @@
 <body>
     Before
     <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %> 
     <%- body %>
     <br>
     After
